--- a/Telegram_Bot.ipynb
+++ b/Telegram_Bot.ipynb
@@ -67,10 +67,14 @@
    "outputs": [],
    "source": [
     "import requests\n",
+    "\n",
     "TOKEN = \"Bot_Token\" \n",
     "chat_id = \"Chat_ID\"\n",
-    "message = \"Finnished!\"\n",
+    "\n",
+    "message = \"Your Code has finished running !\"\n",
+    "\n",
     "url = f\"https://api.telegram.org/bot{TOKEN}/sendMessage?chat_id={chat_id}&text={message}\"\n",
+    "\n",
     "print(requests.get(url).json()) # this sends the message"
    ]
   },
